# dynamic-moe-router-kit

./: .bandit  .dockerignore  .env.example  .gitignore  .license-header.txt  .pre-commit-config.yaml  .releaserc.json  .safety-policy.json  .sbom-config.yaml  .secrets.baseline  .slsa-config.yaml  API_REFERENCE.md  AUTONOMOUS_SDLC_COMPLETE.md  AUTONOMOUS_SDLC_COMPLETION.md  AUTONOMOUS_SDLC_COMPLETION_SUMMARY.md  AUTONOMOUS_SDLC_DEPLOYMENT_GUIDE.md  AUTONOMOUS_SDLC_NEXT_GENERATION_COMPLETION.md  AUTONOMOUS_SDLC_SUMMARY.md  BREAKTHROUGH_RESEARCH_PAPER.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  Dockerfile  Dockerfile.gpu  Dockerfile.production  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_SUMMARY.md  PRODUCTION_GUIDE.md  PROJECT_CHARTER.md  README.md  RESEARCH_IMPLEMENTATION_COMPLETE.md  RESEARCH_IMPLEMENTATION_SUMMARY.md  RESEARCH_PAPER_AUTONOMOUS_SDLC.md  SECURITY.md  TERRAGON_SDLC_MASTER_COMPLETION.md  autonomous_sdlc_quality_integration.py  (+33 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
config/: production.json
deploy/docker/: Dockerfile.production
deploy/kubernetes/: deployment.yaml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  ROADMAP.md
docs/adr/: 000-template.md  001-multi-backend-architecture.md  002-dynamic-routing-algorithm.md  003-complexity-estimation-strategy.md  README.md
docs/deployment/: MONITORING.md  deployment-guide.md
docs/development/: DEBUGGING.md
docs/monitoring/: observability-guide.md
docs/security/: testing.md
docs/testing/: testing-guide.md
docs/workflows/: CI_CD_REQUIREMENTS.md  README.md  SETUP_REQUIRED.md
examples/: basic_usage.py  comprehensive_demo.py  dashboard_demo.py  federated_privacy_demo.py  next_generation_showcase.py  performance_benchmark.py  production_demo.py  production_showcase.py  pytorch_usage.py  research_evaluation_demo.py  research_publication_demo.py  robust_error_handling_demo.py
monitoring/: grafana-dashboard.json  health_checks.py  prometheus_metrics.py  structured_logging.py  tracing.py
monitoring/alerts/: model_alerts.yml
monitoring/config/: grafana.yml  prometheus.yml
scripts/: build.sh  collect_metrics.py  maintenance_tasks.py  performance_profiler.py  setup_automation.py
src/dynamic_moe_router/: __init__.py  adaptive_entropy_router.py  adaptive_router.py  advanced_validation.py  auto_scaling.py  benchmarks.py  (+51 more)
tests/: conftest.py  test_autonomous_sdlc_complete.py  test_autonomous_sdlc_generations.py
(+29 files in other folders)
